@@ -938,7 +938,11 @@ Input Data for <b>Frame3DD</b> may be read and written using spreadsheet program
 </p>
 
 <p>
-Any of the  <a href="http://www.duke.edu/~hpgavin/frame3dd/#examples"><b>Frame3DD</b> example Input Data files</a> may be opened with a spreadsheet program.
+Any of the  <a href="http://www.duke.edu/~hpgavin/frame3dd/#examples"><b>
+Frame3DD</b> example Input Data files</a>
+may be opened with a spreadsheet program.
+A <b>.CSV</b> formatted Input Data template is here:
+<a href="template.csv">template.csv</a>. 
 When editing an Input Data file with a spreadsheet program, save it in
 <b>.CSV</b> format (with a "<b>.CSV</b>" filename extension).
 </p>
@@ -2127,7 +2131,9 @@ frequency convergence tolerance.  The frequency convergence error is defined her
 
 <a name="InputData"><h2>9. Input Data Format</h2>
 <p>
-Click <a href="template.3dd">here</a> to download an Input Data template, template.3dd, or copy-and-paste the text below.
+Input Data templates in plain text (.3dd) and spreadsheet (.csv) formats are
+here:  <a href="template.3dd">template.3dd</a>
+and here:  <a href="template.csv">template.csv</a>
 </p>
 
 <p>
